@@ -1,3 +1,10 @@
+2017-06-23  Bernd Edlinger  <bernd.edlinger@hotmail.de>
+
+	rtl-optimizatoin/79286
+	* ira.c (update_equiv_regs): Revert to using may_trap_or_fault_p again.
+	* rtlanal.c (rtx_addr_can_trap_p_1): SYMBOL_REF_FUNCTION_P can never
+	trap.  PIC register plus a const unspec without offset can never trap.
+
 2017-06-23  Marc Glisse  <marc.glisse@inria.fr>
 
 	* tree.h (builtin_structptr_type): New type.
